fixed history, added pages for unsolved nt problems source

--- a/report.tex
+++ b/report.tex
@@ -68,7 +68,7 @@ An Egyptian fraction is an expansion of a positive rational number as a sum of (
 	\frac{p}{q} = \frac{1}{a_1} + \frac{1}{a_2} + \ldots + \frac{1}{a_n}
 \end{equation}
 \subsection{History}
-Usage of Egyptian fractions by Egyptians is evidenced by the Rhind Papyrus which is a document that dates back to 1650 BC [2]. The Rhind Papyrus gets its name from Henry Rhind who purchased the document in 1858 [2]. In the Rhind Papyrus, there is a table of Egyptian Fraction representations for fractions of the form 2/n (where n is odd) and Egyptian fraction practice problems with corresponding solutions [2]. With the advent of computational theory, new problems involving Egyptian fractions have appeared such as the computation complexity of computing Egyptian Fraction of a fraction in the fewest terms possible and the Erd\H{o}s-Straus Conjecture [6].
+Usage of Egyptian fractions by Egyptians is evidenced by the Rhind Papyrus which is a document that dates back to 1550 BCE \cite{imhausen}. The Rhind Papyrus gets its name from Henry Rhind who purchased the document in 1858 \cite{imhausen}. In the Rhind Papyrus, there is a table of Egyptian Fraction representations for fractions of the form $\frac{2}{n}$ (where n is odd) and Egyptian fraction practice problems with corresponding solutions \cite{imhausen}. With the advent of computational theory, new problems involving Egyptian fractions have appeared such as the computation complexity of computing Egyptian Fraction of a fraction in the fewest terms possible and the Erd\H{o}s-Straus Conjecture [6].
 \subsection{Properties}
 Egyptian fractions can be used to solve questions concerning division of a quantity among multiple parties where the division may not be even. For example, consider the problem of dividing 5 loaves of bread among 7 people: $5/7 = 1/2 + 1/7 + 1/14$. Without the expansion, all 5 loaves would need to be divided into sevenths, then 5 of each seventh would go to each person. With the expansion, 4 loaves can be cut into halves, each person receiving a half piece. The remaining half loaf can be cut into sevenths (these would be fourteenths), and each person would receive a fourteenth. There remains one loaf of bread which we can cut into sevenths and evenly distribute among all 7 people. In total, we performed $4 + 6 + 6 = 16$ cuts. Without the expansion, we would need to perform $5 \times 6 = 30$ cuts. Beyond the application of dividing quantities, several mathematicians found interesting properties associated with Egyptian fractions. For instance, Fibonacci was able to prove that any fraction could be represented as a finite sum of distinct unit fractions \cite{dunton}. 
 
@@ -238,9 +238,15 @@ In \cite{starke}, Starke et. al show that a finite odd Egyptian fraction exists 
 	\textit{4512},
 	The American Mathematical Monthly, vol. 61, no. 3, p. 200, 1954.
 	\bibitem{guy}
-	R. K. Guy,
+	Guy, Richard,
 	\textit{Unsolved Problems in Number Theory},
+	pp. 252-259,
 	1981.
+	\bibitem{imhausen}
+	Imhausen, Annette,
+	\textit{Mathematics in Ancient Egypt: A Contextual History},
+	pp. 65-67,
+	2016.
 	
 \end{thebibliography}
 
